--- a/src/components/footers/Footer.astro
+++ b/src/components/footers/Footer.astro
@@ -80,8 +80,8 @@ const lastPosts = posts
 >
 	<Container>
 		<div class="items-center flex-col w-full">
-			<div class="items-center flex-col justify-center flex text-white">
-				<h3
+			<div style="min-width: min(90vw, 800px)" class="items-center flex-col justify-center flex text-white">
+				<!-- <h3
 					class="text-4xl lg:text-6xl leading-normal text-center max-w-4xl"
 					set:html={footer.title}
 				/>
@@ -97,9 +97,9 @@ const lastPosts = posts
 							</Link>
 						))
 					}
-				</div>
+				</div> -->
 			</div>
-			<div
+			<!-- <div
 				class="auto-cols-fr grid-cols-1 lg:grid-cols-[1.8fr_.4fr_1fr] grid-rows-[auto] grid mt-16 gap-10"
 			>
 				<div class="col-span-1 row-span-1">
@@ -213,7 +213,7 @@ const lastPosts = posts
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="mt-16">
 				<div class="items-center justify-between flex gap-4">
 					<p class="text-white/[0.78] text-base">
@@ -238,7 +238,7 @@ const lastPosts = posts
 							))
 						}
 					</div>
-					<div class="flex gap-5 text-lg text-blue-700">
+					<!-- <div class="flex gap-5 text-lg text-blue-700">
 						<a href="/privacy" class="inline-block max-w-full"
 							><p
 								class="text-white border-b-2 cursor-pointer pb-1 border-white border-solid"
@@ -252,7 +252,7 @@ const lastPosts = posts
 								Terms
 							</p></a
 						>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
