--- a/src/components/headers/Navigation.astro
+++ b/src/components/headers/Navigation.astro
@@ -219,7 +219,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 				</svg>
 			</a>
 		</div>
-		<div
+		<!-- <div
 			class="col-start-2 hidden lg:flex justify-center items-center h-full"
 		>
 			<a
@@ -249,7 +249,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<nav
 		id="navigation"
