--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,7 @@ const { seo } = Astro.props;
 	<body>
 		<LoadingIndicator />
 		<LinesWrapper />
-		<Navigation showTopBar />
+		<!-- <Navigation showTopBar /> -->
 		<slot />
 		{widget.enabled && <Widget />}
 		<Footer />
