--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -33,6 +33,10 @@ const componentLocales: ComponentLocales = {
 		writtenBy: "Written by: ",
 		writtenAt: "on",
 	},
+	da: {
+		writtenBy: "Skrevet af: ",
+		writtenAt: "den",
+	},
 };
 
 const l = componentLocales[currentLocale ?? defaultLocale];
