--- a/src/layouts/WorkLayout.astro
+++ b/src/layouts/WorkLayout.astro
@@ -32,6 +32,9 @@ const componentLocales: ComponentLocales = {
 	en: {
 		visitProject: "Visit project",
 	},
+	da: {
+		visitProject: "Se projekt",
+	},
 };
 
 const l = componentLocales[currentLocale ?? defaultLocale];
