--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -73,10 +73,7 @@ const { title, subtitle, buttons = defaultButtons } = Astro.props;
 					</div>
 				</div>
 				<div class="justify-self-center col-span-1 row-span-1">
-					<!-- <Blob class="xl:pl-32" /> -->
-
-				<img src={heroImage.src} alt="image description" />;
-
+					<img src={heroImage.src} alt="image description" />
 				</div>
 			</div>
 		</div>
