--- a/src/components/NotFound.astro
+++ b/src/components/NotFound.astro
@@ -1,7 +1,7 @@
 ---
-import Container from "@/components/primitives/Container.astro";
-import Link from "@/components/primitives/Link.astro";
-import Title from "@/components/primitives/Title.astro";
+import Container from '@/components/primitives/Container.astro';
+import Link from '@/components/primitives/Link.astro';
+import Title from '@/components/primitives/Title.astro';
 ---
 
 <Container tag="section" class="pt-52 pb-40 md:pb-48 md:pt-64">
