--- a/src/components/primitives/LinesWrapper.astro
+++ b/src/components/primitives/LinesWrapper.astro
@@ -1,28 +1,28 @@
 ---
 const columnsClasses = [
-	"line-full _20",
-	"line-full _20",
-	"line-full _5",
-	"line-full",
-	"line-full _5",
-	"line-full",
-	"line-full _20",
-	"line-full",
-	"line-full",
-	"line-full _5",
-	"line-full",
-	"line-full",
-	"line-full _5",
-	"line-full _20",
-	"line-full",
-	"line-full _5",
-	"line-full",
-	"line-full",
-	"line-full _20",
-	"line-full _5",
-	"line-full",
-	"line-full",
-	"line-full",
+	'line-full _20',
+	'line-full _20',
+	'line-full _5',
+	'line-full',
+	'line-full _5',
+	'line-full',
+	'line-full _20',
+	'line-full',
+	'line-full',
+	'line-full _5',
+	'line-full',
+	'line-full',
+	'line-full _5',
+	'line-full _20',
+	'line-full',
+	'line-full _5',
+	'line-full',
+	'line-full',
+	'line-full _20',
+	'line-full _5',
+	'line-full',
+	'line-full',
+	'line-full',
 ];
 ---
 
