--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
-import about from "@/assets/pages/about/about.png";
+import { Image } from 'astro:assets';
+import about from '@/assets/pages/about/about.png';
 
 const { title, subtitle, content } = Astro.props;
 ---
