--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@/components/primitives/Button.astro";
+import Button from '@/components/primitives/Button.astro';
 
 type HTMLInputTypeAttribute =
 	| "button"
@@ -25,7 +25,7 @@ type HTMLInputTypeAttribute =
 	| "url"
 	| "week";
 
-type FormFieldType = HTMLInputTypeAttribute | "textarea" | "submit";
+type FormFieldType = HTMLInputTypeAttribute | 'textarea' | 'submit';
 
 interface FormField {
 	title: string;
