--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import type { ButtonProps } from "@/components/primitives/Button.astro";
-import Container from "@/components/primitives/Container.astro";
-import Link from "@/components/primitives/Link.astro";
-import heroImage from "@/assets/pages/homepage/landing-logo-600x600.png";
+import type { ButtonProps } from '@/components/primitives/Button.astro';
+import Container from '@/components/primitives/Container.astro';
+import Link from '@/components/primitives/Link.astro';
+import heroImage from '@/assets/pages/homepage/landing-logo-600x600.png';
 
 interface Props {
 	title: string;
@@ -12,10 +12,10 @@ interface Props {
 
 const defaultButtons: ButtonProps[] = [
 	{
-		title: "Contattaci",
-		href: "/contact",
-		style: "button",
-		icon: "iconamoon:arrow-top-right-1-thin",
+		title: 'Contattaci',
+		href: '/contact',
+		style: 'button',
+		icon: 'iconamoon:arrow-top-right-1-thin',
 	},
 ];
 
