--- a/src/components/sections/Results.astro
+++ b/src/components/sections/Results.astro
@@ -1,7 +1,7 @@
 ---
-import { Image } from "astro:assets";
-import type { Props as ButtonProps } from "@/components/primitives/Link.astro";
-import Link from "@/components/primitives/Link.astro";
+import { Image } from 'astro:assets';
+import type { Props as ButtonProps } from '@/components/primitives/Link.astro';
+import Link from '@/components/primitives/Link.astro';
 
 interface Props {
 	title: string;
