--- a/src/components/sections/Testimonial.astro
+++ b/src/components/sections/Testimonial.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
-import googleWhite from "@/assets/pages/homepage/google-white.png";
+import { Image } from 'astro:assets';
+import googleWhite from '@/assets/pages/homepage/google-white.png';
 
 interface Props {
 	testimonial: string;
