--- a/src/pages/[...slug]/index.astro
+++ b/src/pages/[...slug]/index.astro
@@ -1,14 +1,14 @@
 ---
-import type { CollectionEntry } from "astro:content";
-import PageLayout from "@/layouts/PageLayout.astro";
-import { getCollectionStaticPaths } from "@/lib/collection-helpers";
+import type { CollectionEntry } from 'astro:content';
+import PageLayout from '@/layouts/PageLayout.astro';
+import { getCollectionStaticPaths } from '@/lib/collection-helpers';
 
 export interface Props {
-	data: CollectionEntry<"pages">;
+	data: CollectionEntry<'pages'>;
 }
 
 export async function getStaticPaths() {
-	return getCollectionStaticPaths("pages");
+	return getCollectionStaticPaths('pages');
 }
 
 const { data: page } = Astro.props;
