--- a/src/components/headers/Navigation.astro
+++ b/src/components/headers/Navigation.astro
@@ -1,7 +1,7 @@
 ---
-import { getLocalizedSettings } from "@/lib/localization-helpers";
-import { translatePath, unlocalizedUrl } from "@/lib/localization-helpers";
-import { defaultLocale, locales } from "site";
+import { getLocalizedSettings } from '@/lib/localization-helpers';
+import { translatePath, unlocalizedUrl } from '@/lib/localization-helpers';
+import { defaultLocale, locales } from 'site';
 
 const currentLocale = Astro.currentLocale;
 
@@ -15,7 +15,6 @@ function isActiveLocale(locale: string): boolean {
 }
 
 const { header } = getLocalizedSettings(currentLocale);
-
 ---
 
 <style>
