--- a/src/components/primitives/Button.astro
+++ b/src/components/primitives/Button.astro
@@ -1,7 +1,5 @@
 ---
-import Link, {
-	type Props as LinkProps,
-} from "@/components/primitives/Link.astro";
+import Link, { type Props as LinkProps } from '@/components/primitives/Link.astro';
 
 export interface ButtonProps extends LinkProps {
 	title?: string;
@@ -11,8 +9,8 @@ const { ...props } = Astro.props as ButtonProps;
 
 const computedProps = {
 	...props,
-	tag: "button",
-	style: "button",
+	tag: 'button',
+	style: 'button',
 } as LinkProps;
 ---
 
