--- a/src/components/primitives/Link.astro
+++ b/src/components/primitives/Link.astro
@@ -1,16 +1,16 @@
 ---
-import { getRelativeLocaleUrl } from "astro:i18n";
-import { Icon } from "astro-icon/components";
-import { defaultLocale } from "site.config";
+import { getRelativeLocaleUrl } from 'astro:i18n';
+import { Icon } from 'astro-icon/components';
+import { defaultLocale } from 'site.config';
 
 const currentLocale = Astro.currentLocale;
 
 export interface Props {
 	href?: string;
-	tag?: "a" | "button";
-	size?: "xs" | "sm" | "md" | "lg";
+	tag?: 'a' | 'button';
+	size?: 'xs' | 'sm' | 'md' | 'lg';
 	block?: boolean;
-	style?: "primary" | "button" | "outline" | "buttonLight";
+	style?: 'primary' | 'button' | 'outline' | 'buttonLight';
 	icon?: string;
 	class?: string;
 	localized?: boolean;
@@ -21,22 +21,13 @@ export type LinkType = Props & {
 	title?: string;
 };
 
-const {
-	href,
-	block,
-	icon,
-	size = "md",
-	style = "primary",
-	localized = true,
-	class: className,
-	...rest
-} = Astro.props as Props;
+const { href, block, icon, size = 'md', style = 'primary', localized = true, class: className, ...rest } = Astro.props as Props;
 
 const sizes = {
-	xs: "",
-	sm: "px-4 py-2",
-	md: "px-5 py-2.5 text-xl text-lg",
-	lg: "px-8 py-3 text-2xl",
+	xs: '',
+	sm: 'px-4 py-2',
+	md: 'px-5 py-2.5 text-xl text-lg',
+	lg: 'px-8 py-3 text-2xl',
 };
 
 const iconSizes = {
@@ -46,19 +37,17 @@ const iconSizes = {
 	lg: 40,
 };
 
-const Tag = Astro.props.tag || "a";
+const Tag = Astro.props.tag || 'a';
 
-if (Tag === "a" && !href) {
-	throw new Error("The `href` prop is required when using the `a` tag.");
+if (Tag === 'a' && !href) {
+	throw new Error('The `href` prop is required when using the `a` tag.');
 }
 
 const styles = {
-	primary: "",
-	button: "button-primary bg-black text-white items-center justify-center py-2.5 px-6 text-center inline-block max-w-full rounded-md font-semibold",
-	buttonLight:
-		"button-primary bg-white text-black items-center justify-center py-3.5 px-6 text-center inline-block max-w-full rounded-md font-bold",
-	outline:
-		"hover:bg-primary-800 hover:text-white border border-primary-100 rounded-md",
+	primary: '',
+	button: 'button-primary bg-black text-white items-center justify-center py-2.5 px-6 text-center inline-block max-w-full rounded-md font-semibold',
+	buttonLight: 'button-primary bg-white text-black items-center justify-center py-3.5 px-6 text-center inline-block max-w-full rounded-md font-bold',
+	outline: 'hover:bg-primary-800 hover:text-white border border-primary-100 rounded-md',
 };
 ---
 
