--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,11 @@
 ---
-import Head from "@/components/Head.astro";
-import Footer from "@/components/footers/Footer.astro";
-import Navigation from "@/components/headers/Navigation.astro";
-import LinesWrapper from "@/components/primitives/LinesWrapper.astro";
-import LoadingIndicator from "@/components/primitives/LoadingIndicator.astro";
-import { getLocalizedSettings } from "@/lib/localization-helpers";
-import type { SEOProps } from "astro-seo";
+import Head from '@/components/Head.astro';
+import Footer from '@/components/footers/Footer.astro';
+import Navigation from '@/components/headers/Navigation.astro';
+import LinesWrapper from '@/components/primitives/LinesWrapper.astro';
+import LoadingIndicator from '@/components/primitives/LoadingIndicator.astro';
+import { getLocalizedSettings } from '@/lib/localization-helpers';
+import type { SEOProps } from 'astro-seo';
 
 const currentLocale = Astro.currentLocale;
 
