--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,12 +1,11 @@
 ---
-import Head from '@/components/Head.astro';
-import Footer from '@/components/footers/Footer.astro';
-import Navigation from '@/components/headers/Navigation.astro';
-import LinesWrapper from '@/components/primitives/LinesWrapper.astro';
-import LoadingIndicator from '@/components/primitives/LoadingIndicator.astro';
-import { getLocalizedSettings } from '@/lib/localization-helpers';
-import type { SEOProps } from 'astro-seo';
-
+import Head from "@/components/Head.astro";
+import Footer from "@/components/footers/Footer.astro";
+import Navigation from "@/components/headers/Navigation.astro";
+import LinesWrapper from "@/components/primitives/LinesWrapper.astro";
+import LoadingIndicator from "@/components/primitives/LoadingIndicator.astro";
+import { getLocalizedSettings } from "@/lib/localization-helpers";
+import type { SEOProps } from "astro-seo";
 const currentLocale = Astro.currentLocale;
 
 type Props = {
@@ -19,19 +18,17 @@ export const version: string = __VERSION__;
 ---
 
 <html lang={currentLocale} data-version={version}>
-	<Head seo={seo}>
-	</Head>
+	<Head seo={seo} />
 	<body>
 		<LoadingIndicator />
 		<LinesWrapper />
 		<!-- <Navigation showTopBar /> -->
 		<slot />
 		<Footer />
+		<script>
+			const version = document.documentElement.dataset.version;
+			// eslint-disable-next-line no-console
+			console.log(`Version: ${version as any}`);
+		</script>
 	</body>
 </html>
-
-<script>
-	const version = document.documentElement.dataset.version;
-	// eslint-disable-next-line no-console
-	console.log(`Version: ${version as any}`);
-</script>
