refactor: move application to /apps folder

--- a/apps/frontend/src/components/sections/Contact.astro
+++ b/apps/frontend/src/components/sections/Contact.astro
@@ -1,29 +1,7 @@
 ---
 import Button from '@/components/primitives/Button.astro';
 
-type HTMLInputTypeAttribute =
-	| "button"
-	| "checkbox"
-	| "color"
-	| "date"
-	| "datetime-local"
-	| "email"
-	| "file"
-	| "hidden"
-	| "image"
-	| "month"
-	| "number"
-	| "password"
-	| "radio"
-	| "range"
-	| "reset"
-	| "search"
-	| "submit"
-	| "tel"
-	| "text"
-	| "time"
-	| "url"
-	| "week";
+type HTMLInputTypeAttribute = 'button' | 'checkbox' | 'color' | 'date' | 'datetime-local' | 'email' | 'file' | 'hidden' | 'image' | 'month' | 'number' | 'password' | 'radio' | 'range' | 'reset' | 'search' | 'submit' | 'tel' | 'text' | 'time' | 'url' | 'week';
 
 type FormFieldType = HTMLInputTypeAttribute | 'textarea' | 'submit';
 
